002 Adding Routers to finilize 001

--- a/uiAngularExpressSql/src/app/app.component.html
+++ b/uiAngularExpressSql/src/app/app.component.html
@@ -1,2 +1,7 @@
-Test
+<ul>
+    <li><a [routerLink]="['home']">Home</a></li>
+    <li><a [routerLink]="['person']">Check Person</a></li>
+    <li><a [routerLink]="['addPerson']">Add Person</a></li>
+</ul>
+
 <router-outlet></router-outlet>
