--- a/uiAngularExpressSql/src/app/component/home/home.component.html
+++ b/uiAngularExpressSql/src/app/component/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<h3>The application build is to interect with the MYSQL DB using Node & Expressjs.</h3>
+<h4>Check Person: This will show all person present in the DB.(i.e Select Query)</h4>
+<h4>Add Person: This will allow user to add person to the DB.(i.e Insert Query)</h4>
